fix column gaps

--- a/css/responsive/desktop.styl
+++ b/css/responsive/desktop.styl
@@ -4,7 +4,7 @@
 
 #exhibition-list
   column-count: 3
-  column-gap: $gutter * 2
+  column-gap: $gutter
 
 // ******************************************************
 
@@ -12,4 +12,4 @@
 
 #exhibition-content
   column-count: 2
-  column-gap: $gutter * 2
+  column-gap: $gutter
